--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1119,7 +1119,7 @@ img.mugshot {display: block;}
 /* End hiding from MSIE for Mac */
 
 div.left, div.right {width: 50%;}
-div.left {clear: left; float: left;}
+div.left {clear: both; float: left;}
 div.right {clear: right; float: right;}
 div.section {border: dotted #ccc;}
 div.left div.section {
@@ -1199,16 +1199,14 @@ li {
 /* Various custom list formats: */
 ul.architecture, li.architecture     {list-style-image: url(/@@/architecture);}
 ul.blueprint, li.blueprint           {list-style-image: url(/@@/blueprint);}
+ul.branch, li.branch                 {list-style-image: url(/@@/branch);}
 ul.distrorelease, li.distrorelease   {list-style-image: url(/@@/distribution);}
-ul.package-binary, li.package-binary {
-  list-style-image: url(/@@/package-binary);
-}
+ul.package.binary, li.package.binary {list-style-image: url(/@@/pkg-binary);}
+ul.package.source, li.package.binary {list-style-image: url(/@@/pkg-source);}
 ul.person, li.person                 {list-style-image: url(/@@/person);}
-ul.spec, li.spec                     {list-style-image: url(/@@/spec);}
 ul.sprint, li.sprint                 {list-style-image: url(/@@/sprint);}
-ul.webref, li.webref, ul.external.link, li.external.link {
-  list-style-image: url(/@@/link);
-}
+ul.webref, li.webref,
+ul.external.link, li.external.link   {list-style-image: url(/@@/link);}
 
 .bug-summary {
   font-weight: bold;
