Begins migrating launchpad.css to style.css, and stripping unused CSS.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1,33 +1,67 @@
 .demo {background-color: #fee;}
 
 /* === Stuff browsers should do but don't === */
+
+.clearfix:after { /* use class="clearfix" whenever floats should be enclosed */
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.clearfix {display: inline-table;}
+/* Work around float bug in MSIE for Windows, while hiding from MSIE for Mac \*/
+* html .clearfix {height: 1%;}
+.clearfix {display: block;}
+/* End hiding from MSIE for Mac */
+
+abbr[title], acronym[title] {border-bottom: 1px dotted black; cursor: help;}
+address {font-style: inherit;}
+* html body {word-wrap: break-word;} /* stops floats dropping in IE 5.5/6 */
 dt dfn {font-style: normal; font-weight: bold;}
+dd {margin-bottom: 1em;}
+kbd {
+  border: 1px solid;
+  border-color: white gray gray white;
+  color: black;
+  background-color: #ddd;
+  min-width: 1em;
+}
+label {white-space: nowrap;}
+legend {font-weight: bold;}
+legend legend {font-weight: normal;}
+.listbox { /* a scrolling list of checkboxes or radio buttons */
+  border: 1px solid #8cacbb;
+  display: inline-block;
+  max-height: 12em;
+  overflow: auto;
+  overflow: -moz-scrollbars-vertical;
+}
+.listbox label {
+  background-color: #f6f6f6;
+  border: solid white;
+  border-width: 0 0 1px 0;
+  display: block;
+}
+
+thead {vertical-align: bottom;}
 tr {vertical-align: top;}
+th {text-align: right;}
+thead th, tr.thead th {text-align: center;}
+/* make <wbr> work with Opera */
+/* XXX: 20061026 jamesh Disabled since BjornT reported display problems */
+/* wbr:after {content: "\00200B"} */
 
 /* === Overall presentation === */
-body {
+
+html {
   position: relative;
-  font-family: trebuchet ms, tahoma, arial, verdana, sans-serif;
+  font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
   font-size: 8pt;
   color: #656565;
-  margin: 0;
-  padding: 0;
   background-color: #FFFFFF;
 }
-dd {
-  margin-bottom: 1em;
-}
-td {
-  font-family: trebuchet ms, tahoma, arial, verdana, sans-serif;
-  font-size: 1em;
-  color: #656565;
-}
-body.smallText #wrapper {font-size: 1em;}  
-body.mediumText #wrapper {font-size: 1.2em;}  
-body.largeText #wrapper {font-size: 1.4em;}
-body.smallText #central_column {font-size: 1em;}  
-body.mediumText #central_column {font-size: 1.2em;}
-body.largeText #central_column {font-size: 1.4em;}
+body {margin: 0; padding: 0;}
 :link {
   color: #039;
   text-decoration: none;
@@ -43,25 +77,22 @@ body.largeText #central_column {font-size: 1.4em;}
   text-decoration: none;
 }
 
-input, select {
-  font-family: trebuchet ms, tahoma, arial, verdana, sans-serif;
-  font-size: 10px;
+/* --- Form controls --- */
+
+form {border: 0; margin: 0; padding: 0;}
+input, select, textarea {
+  background-color: #fff;
   color: #656565;
-  background-color: #FFFFFF;
-  margin: 0;}
-  textarea {font-family: trebuchet ms, tahoma, arial, verdana, sans-serif;
-  font-size: 11px;
-  color: #656565;
-  background-color: #FFFFFF;
+  font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
   margin: 0;
 }
+input, select {font-size: 10px;}
+textarea {font-size: 11px;}
+
+/* --- Other --- */
+
 a img {
   border: none;
-}
-form {
-  border: 0;
-  margin: 0;
-  padding: 0;
 }
 form.primary.search {
   margin-bottom: 2em;
@@ -83,11 +114,11 @@ hr {
   display: none;
 }
 h1 {
-  font-weight: bold;
+  font-weight: normal;
   margin: 0;
   padding: 0px 0px 10px 0px;
   color: #000000;
-  font-size: 1.75em;
+  font-size: 2.25em;
 }
 h2 {
   font-weight: bold;
@@ -147,6 +178,11 @@ p {
   color: #FF0000;
   font-weight: bold;
 }
+.debug {
+  background: none;
+  color: #f09;
+}
+
 .anchor {
   height: 1px;
   overflow: hidden;
