CSS for bug descriptions, questions, and comments thereon.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -152,11 +152,6 @@ strong em {
 strong span {
   color: #656565;
 }
-p {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 0.8em;
-} 
 .link_img {border: 0;}
 .message {
   color: #FF0000;
@@ -777,6 +772,14 @@ a.open, a.closed {
 /* === Application-specific styles === */
 
 #application-footer strong {font-weight: normal;}
+
+.report, .boardComment {font-size: 1.125em;} /* bug descriptions/comments */
+.report h2 {font-size: 1.4em;}
+.boardComment {border: 1px solid #ddd; margin: 1em 0 1.5em;}
+* html .boardComment {float: left; clear: both; width: 99%;} /* IE float bug */
+.boardCommentDetails {background-color: #eee; padding: 0.5em 12px;}
+.boardCommentBody {padding: 0.5em 12px 0;}
+.boardCommentContent { line-height: 1.5em;}
 
 /* --- Overview --- */
 
