--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -1065,6 +1065,12 @@ body.tab-translations #actions h2, body.tab-translations #actions h2:hover {
   background: none;
   color: #bb3a84;
 }
+.translation code {font-weight: bold;} /* an interpolation code, such as %i */
+.translation samp { /* a leading/trailing space */
+  background: url(/@@/translation-space) center center no-repeat;
+  padding: 0 4px; /* should be half the width of /@@/translation-space */
+  white-space: pre; /* stops consecutive spaces from collapsing */
+}
 
 /* --- Answers --- */
 
@@ -1285,19 +1291,35 @@ li {
 }
 
 /* Various custom list formats: */
+ul.add, li.add                       {list-style-image: url(/@@/add);}
 ul.architecture, li.architecture     {list-style-image: url(/@@/architecture);}
+ul.build-success, li.build-success   {list-style-image: url(/@@/build-success);}
 ul.blueprint, li.blueprint           {list-style-image: url(/@@/blueprint);}
 ul.branch, li.branch                 {list-style-image: url(/@@/branch);}
 ul.bug, li.bug                       {list-style-image: url(/@@/bug);}
+ul.bug.remote, li.bug.remote         {list-style-image: url(/@@/bug-remote);}
+ul.cve, li.cve                       {list-style-image: url(/@@/cve);}
 ul.distro, li.distro                 {list-style-image: url(/@@/distribution);}
 ul.distrorelease, li.distrorelease   {list-style-image: url(/@@/distribution);}
+ul.download, li.download             {list-style-image: url(/@@/download);}
+ul.edit, li.edit                     {list-style-image: url(/@@/edit);}
+ul.info, li.info                     {list-style-image: url(/@@/info);}
+ul.languages, li.languages           {list-style-image: url(/@@/languages);}
+ul.locked, li.locked                 {list-style-image: url(/@@/locked);}
+ul.mail, li.mail                     {list-style-image: url(/@@/mail);}
+ul.milestone, li.milestone           {list-style-image: url(/@@/milestone);}
 ul.package.binary, li.package.binary {list-style-image: url(/@@/pkg-binary);}
 ul.package.source, li.package.source {list-style-image: url(/@@/pkg-source);}
 ul.person, li.person                 {list-style-image: url(/@@/person);}
 ul.product, li.product               {list-style-image: url(/@@/product);}
+dl.products>dt:before                {content: url(/@@/product);}
+ul.search, li.search                 {list-style-image: url(/@@/search);}
 ul.sprint, li.sprint                 {list-style-image: url(/@@/sprint);}
 ul.team, li.team                     {list-style-image: url(/@@/team);}
+ul.ticket>li, li.ticket              {list-style-image: url(/@@/ticket);}
+ul.translations, li.translations     {list-style-image: url(/@@/translations);}
 ul.external.link, li.external.link   {list-style-image: url(/@@/link);}
+ul.webref, li.webref                 {list-style-image: url(/@@/link);}
 
 .bug-summary {
   font-weight: bold;
